# stellar-payscript

./: README.md
.github/workflows/: ci.yml
contracts/hello-world/: Cargo.toml
contracts/payscript/: Cargo.toml
contracts/payscript/src/: lib.rs
frontend/: package.json
frontend/components/: CreditBalance.tsx  PurchaseForm.tsx  WalletConnect.tsx
frontend/hooks/: useFreighter.ts
frontend/lib/: albedo.ts  stellar.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
